--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "github-slugger": "^2.0.0",
-    "next": "15.0.2",
+    "next": "^13.0.0",
     "next-contentlayer": "^0.3.4",
     "next-sitemap": "^4.2.2",
     "postcss": "8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.1",
